--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     implementation 'com.jakewharton:butterknife:10.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
-
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
 }
