--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.movies">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -27,7 +28,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".details.MovieDetails" />
-        <activity android:name=".details.SimilarMovies"/>
     </application>
 
 </manifest>
