--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,6 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0'
 
 }
