--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Movies">
-        <activity android:name=".details.CastDetails"></activity>
+        <activity android:name=".details.CastDetails" />
         <activity
             android:name=".HomeActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Movies.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation"
