--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
     implementation 'com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0'
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7'
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
 
 }
